[package]
name = "oyster-attestation-utility"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.79"
clap = { version = "4.4.6", features = ["derive"] }
ethers = "2.0.11"
hex = "0.4.3"
libsodium-sys-stable = "1.19.30"
oyster-sdk = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.56"
