[package]
name = "oyster-attestation-server-secp256k1"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
libsodium-sys-stable = "1.20.4"
oyster-sdk = "0.7.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"

[profile.release]
strip = true
lto = true
panic = "abort"
